Implemented all auth routes in swagger documentation
